# bge-router

./: AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.tls  NOTICE  README.md  deny.toml  licenserc.toml  openapi.yaml
.cursor/: Dockerfile  environment.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
config/hawkeye/: license-header.txt
docs/: deployment.md  dns-discovery.md  fallback.md  performance.md  routing-policy.md  tls.md  upstream-health.md
docs/decisions/: 001-dns-based-discovery.md  002-arc-swap-snapshot.md
src/: bootstrap.rs  config.rs  error.rs  handler.rs  headers.rs  lib.rs  logging.rs  main.rs  metrics.rs  router.rs  state.rs  upstream.rs
src/bootstrap/: router.rs  server.rs
src/config/: tests.rs
src/handler/: health.rs  proxy.rs
src/logging/: tests.rs
src/router/: fallback.rs  policy.rs  proxy.rs  route_policy.rs
src/router/fallback/: tests.rs
src/router/policy/: tests.rs
src/upstream/: discovery.rs  health.rs  snapshot.rs
